fixed last post in forum

--- a/index.yaml
+++ b/index.yaml
@@ -89,3 +89,9 @@ indexes:
   properties:
   - name: thread_id
   - name: created
+
+- kind: forum_forumpost
+  properties:
+  - name: thread_id
+  - name: created
+    direction: desc
